// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon 传name 1`] = `
<svg
  className="cui-icon"
>
  <use
    xlinkHref="#emoji-cool"
  />
</svg>
`;

exports[`Icon 传name、className 1`] = `
<svg
  className="cui-icon icon"
>
  <use
    xlinkHref="#emoji-happy"
  />
</svg>
`;

exports[`Icon 传name、className、事件 1`] = `
<svg
  className="cui-icon icon"
  onClick={[Function]}
>
  <use
    xlinkHref="#emoji-happy"
  />
</svg>
`;
